<resources>
    <string name="app_name">EasyView</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_email">jondoe@gmail.com</string>
    <string name="dummy_password">123456789</string>
    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Question">How are you?</string>
    <string name="Send">Send</string>
    <string name="Done">Done</string>
    <string name="Upload">Upload</string>
    <string name="Beautiful_Picture">Beautiful Picture</string>
    <string name="Uploading">Uploading</string>
    <string name="Loading_Complete">Loading Complete, button is disabled</string>

    <array name="sample_list">
        <item>android 6.0 Permission</item>
        <item>Action Button Progress/EndLess</item>
        <item>Submit Button Progress sample</item>
        <item>Generate Button Progress sample</item>
        <item>Button State sample</item>
        <item>底部弹出Dialog</item>
        <item>Tab导航</item>
        <item>刷新列表</item>
        <item>卡片</item>
    </array>
</resources>
