<com.xcheng.view.widget.TopBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:ev_topBarLayout="@layout/ev_toolbar"
    app:ev_topBarTitle="注册">
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp"
        android:inputType="textEmailAddress"
        android:text="@string/dummy_email" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:text="@string/dummy_password" />

    <com.xcheng.view.processbtn.ActionProcessButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="endLess"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:ev_pb_colorComplete="@color/ev_green_complete"
        app:ev_pb_colorNormal="@color/ev_blue_normal"
        app:ev_pb_colorPressed="@color/ev_blue_pressed"
        app:ev_pb_colorProgress="@color/ev_purple_progress"
        app:ev_pb_indicatorHeight="6dp"
        app:ev_pb_mode="endLess"
        app:ev_pb_textComplete="@string/Success"
        app:ev_pb_textProgress="@string/Loading" />

    <com.xcheng.view.processbtn.ActionProcessButton
        android:id="@+id/btnSignIn2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="progress"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:ev_pb_colorComplete="@color/ev_green_complete"
        app:ev_pb_colorNormal="@color/ev_blue_normal"
        app:ev_pb_colorPressed="@color/ev_blue_pressed"
        app:ev_pb_colorProgress="@color/ev_purple_progress"
        app:ev_pb_disableWhenProgress="true"
        app:ev_pb_indicatorHeight="6dp"
        app:ev_pb_maskWhenProgress="true"
        app:ev_pb_mode="progress"
        app:ev_pb_textComplete="@string/Success"
        app:ev_pb_textProgress="@string/Loading" />

</com.xcheng.view.widget.TopBarLayout>

