<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.xcheng.view.processbtn.SubmitProcessButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/Upload"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:ev_pb_textComplete="@string/Done"
        app:ev_pb_textProgress="@string/Uploading"
        app:ev_pb_textError="Error"/>

    <com.xcheng.view.processbtn.GenerateProcessButton
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/Upload"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:ev_pb_textComplete="@string/Done"
        app:ev_pb_textProgress="@string/Uploading"
        app:ev_pb_textError="Error"/>

    <Button
        android:id="@+id/btnProgressError"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Error State setProgress(-1)" />

    <Button
        android:id="@+id/btnProgressNormal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="Normal State setProgress(0)" />

    <Button
        android:id="@+id/btnProgressLoading"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="Progress State setProgress(50)" />

    <Button
        android:id="@+id/btnProgressComplete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Complete State setProgress(100)" />


</LinearLayout>
